--- a/index.html
+++ b/index.html
@@ -4,44 +4,61 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Waldenlan.GitHub.io : Personal Site">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Waldenlan.GitHub.io</title>
+    <meta name="description" content="Qi Lian's Homepage">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.5, minimum-scale=0.8">
+      <!--<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">-->
+      <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+      <link rel="stylesheet" href="./stylesheets/Bootstrap.custom.css">
+      <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+      <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <title>Qi Lian's Homepage</title>
   </head>
 
   <body>
 
     <!-- HEADER -->
+  <div class="maincontent">
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Qi Lian's Homepage</a>
+        </div>
+        <div class="tag_float">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">CV</a></li>
+                <li class="tag_float"><a href="#" class="tag">Research</a></li>
+                <li class="tag_float"><a href="" class="tag">Projects</a></li>
+                <li class="tag_float"><a href="" class="tag">Personal Blog</a></li>
+            </ul>
+        </div>
+    </nav>
+
+
+
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/WaldenLan">View on GitHub</a>
-
-          <h1 id="project_title">Waldenlan.GitHub.io</h1>
-          <h2 id="project_tagline">Personal Site</h2>
-
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
+
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
 <a id="waldenlangithubio" class="anchor" href="#waldenlangithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WaldenLan.github.io</h1>
 
-<p>Personal Site</p>
       </section>
     </div>
 
+      <hr>
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
+    <div class="outer">
       <footer class="inner">
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
-    
 
+  </div>
   </body>
 </html>
