update the homepage

--- a/About Me.html
+++ b/About Me.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Qi (Walden) Lian's Homepage">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.5, minimum-scale=0.8">
-      <!--<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">-->
-      <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
-      <link rel="stylesheet" href="./stylesheets/Bootstrap.custom.css">
-      <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-      <script src="./javascripts/main.js"></script>
-      <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!--<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">-->
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./stylesheets/Bootstrap.custom.css">
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <script src="./javascripts/main.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <title>Qi Lian's Homepage</title>
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-  <div class="maincontent" name="top">
+<!-- HEADER -->
+<div class="maincontent" name="top">
     <nav class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Qi (Walden) Lian's Homepage</a>
+            <a class="navbar-brand" href="./index.html">Qi (Walden) Lian's Homepage</a>
         </div>
         <div class="tag_float">
             <ul class="nav navbar-nav">
@@ -29,23 +29,21 @@
                 <li><a href="" class="tag">Skills</a></li>
                 <li><a href="" class="tag">Projects</a></li>
                 <li><a href="" class="tag">Personal Blog</a></li>
-                <li><a href="./About%20Me.html" class="tag">About Me</a></li>
+                <li class="active"><a href="#" class="tag">About Me</a></li>
             </ul>
         </div>
     </nav>
 
-      <!-- MAIN CONTENT -->
+    <!-- MAIN CONTENT -->
 
 
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/WaldenLan">View on GitHub</a>
+            <a id="forkme_banner" href="https://github.com/WaldenLan">View on GitHub</a>
         </header>
     </div>
 
     <div id="main_content_wrap" class="outer">
-        <h2>Intoduction</h2>
-        <img src="./images/personal%20photo.jpg" alt="Qi Lian's Personal Photo" width="250">
         <div class="intro">
             <div class="introduction">
                 <p>Hi! I'm Qi Lian, and you can call me Walden Lan.</p>
@@ -54,28 +52,17 @@
                     Lab at SJTU. My research interests are machine learning, data mining and web development. You can find most of my works
                     <a href="http://github.com/waldenlan">here</a>.
                 </p>
-                <p>If you want to read more about me, you can go <a href="./About%20Me.html">here</a>.</p>
+                <p>If you want to read more about me, you can go <a href="">here</a>.</p>
 
             </div>
         </div>
-      <section id="main_content" class="inner">
-        <h1>
-            <a id="waldenlangithubio" class="anchor" href="#waldenlangithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WaldenLan.github.io</h1>
-
-      </section>
-        <h2>Contact</h2>
-        <p>
-            Email: darken@sjtu.edu.cn <br>
-            Phone: 18702130985
-        </p>
-        <h2>About this site</h2>
-        <p>This site is made with Bootstrap frameworks, and deployed on <a href="https://github.com/WaldenLan/WaldenLan.github.io">Github</a></p>
         <a href="#top">Go to Top</a>
     </div>
 
-      <!-- FOOTER  -->
-      <hr>
-      <div class="outer endbar">
+
+    <!-- FOOTER  -->
+    <hr>
+    <div class="outer endbar">
         <h4>Qi Lian's Homepage</h4>
         <div class="row">
             <h5 class="col-sm-3">
@@ -102,6 +89,6 @@
     </div>
 
 
-  </div>
-  </body>
+</div>
+</body>
 </html>
