update the website

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                     <a href="http://github.com/waldenlan">here</a>.
                 </p>
                 <p>If you want to read more about me, you can go <a href="./About%20Me.html">here</a>.</p>
- 
             </div>
         </div>
       <section id="main_content" class="inner">
@@ -63,6 +62,12 @@
             <a id="waldenlangithubio" class="anchor" href="#waldenlangithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WaldenLan.github.io</h1>
 
       </section>
+        <h2>Area of Interests</h2>
+        <ul>
+            <li>Machine Learning</li>
+            <li>Data Mining</li>
+            <li>Web Front-end Development</li>
+        </ul>
         <h2>Contact</h2>
         <p>
             Email: darken@sjtu.edu.cn <br>
