Update four sub-pages: Skills, Personal Blog, and About Me.

--- a/Projects.html
+++ b/Projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="About Qi Lian">
+    <meta name="description" content="Qi Lian's Projects">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.5, minimum-scale=0.8">
     <!--<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">-->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -12,48 +12,40 @@
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script src="./javascripts/main.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <title>About Qi Lian</title>
+    <title>Qi Lian's Projects</title>
 </head>
 
 <body>
 
 <!-- HEADER -->
-    <nav class="navbar navbar-default navbar-static-top" role="navigation">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="./index.html">Qi (Walden) Lian's Homepage</a>
-        </div>
-        <div class="tag_float">
-            <ul class="nav navbar-nav">
-                <li><a href="">Resume</a></li>
-                <li><a href="./Skills.html" class="tag">Skills</a></li>
-                <li><a href="./Projects.html" class="tag">Projects</a></li>
-                <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
-                <li class="active"><a href="#" class="tag">About Me</a></li>
-            </ul>
-        </div>
-    </nav>
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="./index.html">Qi (Walden) Lian's Homepage</a>
+    </div>
+    <div class="tag_float">
+        <ul class="nav navbar-nav">
+            <li><a href="">Resume</a></li>
+            <li><a href="./Skills.html" class="tag">Skills</a></li>
+            <li class="active"><a href="#" class="tag">Projects</a></li>
+            <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
+            <li><a href="./About%20Me.html" class="tag">About Me</a></li>
+        </ul>
+    </div>
+</nav>
 
-    <!-- MAIN CONTENT -->
+<!-- MAIN CONTENT -->
 
 <div class="maincontent" name="top">
 
     <div id="main_content_wrap" class="outer">
-        <div class="intro">
-            <img src="./images/personal_photo.jpg" alt="Qi Lian's Personal Photo" width="386">
-            <div id="photo_description">
-                This photo is taken in Pudacuo National Park in Yunnan Province in China.
-            </div>
-            <div class="introduction">
-                <br>
-                <p>Hi! I'm Qi Lian, and you can call me Walden Lan.</p>
-                <p>Currently, I'm an undergraduate at <a href="http://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>. I'm a sophomore student major in ECE (Electrical and Computer Engineering) in
-                    <a href="http://umji.sjtu.edu.cn">UM-SJTU Joint Institute</a>. Currently, I'm serving as a research assistant at <a href="http://bcmi.sjtu.edu.cn">BCMI</a> (Brain-like Computing and Machine Intelligence)
-                    Lab at SJTU. My research interests are machine learning, data mining and web development. You can find most of my works
-                    <a href="http://github.com/waldenlan">here</a>.
-                </p>
-                <p>If you want to know more about me, you can scan the following QR code.</p>
-                <img src="./images/qrcode.jpg" alt="QR code of Qi Lian" width="85">
-
+        <div class="introduction">
+            <h2 id="blog_title">Projects</h2>
+            <span id="blog_description"> --- a place to display some selected works</span>
+            <div class="bg_part _1">
+                <h4 class="bg_title">
+                    Nothing is updated till now.
+                </h4>
+                <p class="bg_content"></p>
             </div>
         </div>
         <a href="#top">Go to Top</a>
