--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <body>
 
     <!-- HEADER -->
-  <div class="maincontent" name="top">
     <nav class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Qi (Walden) Lian's Homepage</a>
@@ -26,23 +25,16 @@
         <div class="tag_float">
             <ul class="nav navbar-nav">
                 <li><a href="">Resume</a></li>
-                <li><a href="" class="tag">Skills</a></li>
-                <li><a href="" class="tag">Projects</a></li>
-                <li><a href="" class="tag">Personal Blog</a></li>
+                <li><a href="./Skills.html" class="tag">Skills</a></li>
+                <li><a href="./Projects.html" class="tag">Projects</a></li>
+                <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
                 <li><a href="./About%20Me.html" class="tag">About Me</a></li>
             </ul>
         </div>
     </nav>
 
       <!-- MAIN CONTENT -->
-
-
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/WaldenLan">View on GitHub</a>
-        </header>
-    </div>
-
+    <div class="maincontent" name="top">
     <div id="main_content_wrap" class="outer">
         <h2>Intoduction</h2>
         <img src="./images/personal%20photo.jpg" alt="Qi Lian's Personal Photo" width="250">
@@ -57,11 +49,6 @@
                 <p>If you want to read more about me, you can go <a href="./About%20Me.html">here</a>.</p>
             </div>
         </div>
-      <section id="main_content" class="inner">
-        <h1>
-            <a id="waldenlangithubio" class="anchor" href="#waldenlangithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WaldenLan.github.io</h1>
-
-      </section>
         <h2>Area of Interests</h2>
         <ul>
             <li>Machine Learning</li>
@@ -69,12 +56,16 @@
             <li>Web Front-end Development</li>
         </ul>
         <h2>Contact</h2>
-        <p>
-            Email: darken@sjtu.edu.cn <br>
-            Phone: 18702130985
-        </p>
+        <div class="row">
+            <h5 class="col-sm-1">
+                Email: <br><br>Phone:
+            </h5>
+            <h5 class="col-sm-2">
+                darken@sjtu.edu.cn <br><br>18702130985
+            </h5>
+        </div>
         <h2>About this site</h2>
-        <p>This site is made with Bootstrap frameworks, and deployed on <a href="https://github.com/WaldenLan/WaldenLan.github.io">Github</a></p>
+        <p>This site is made with <a href="http://getbootstrap.com/"><img src='./images/bootstrap.png' alt='bootstrap_logo' width="90"></a> frameworks, and deployed on <a href="https://github.com/WaldenLan/WaldenLan.github.io">Github</a>.</p>
         <a href="#top">Go to Top</a>
     </div>
 
