Update four sub-pages: Homepage and Resume.

--- a/About Me.html
+++ b/About Me.html
@@ -24,7 +24,7 @@
         </div>
         <div class="tag_float">
             <ul class="nav navbar-nav">
-                <li><a href="">Resume</a></li>
+                <li><a href="./Resume.html">Resume</a></li>
                 <li><a href="./Skills.html" class="tag">Skills</a></li>
                 <li><a href="./Projects.html" class="tag">Projects</a></li>
                 <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
