--- a/Resume.html
+++ b/Resume.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Qi Lian's Projects">
+    <meta name="description" content="Qi Lian's Resume">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.5, minimum-scale=0.8">
     <!--<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">-->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -12,7 +12,7 @@
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script src="./javascripts/main.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <title>Qi Lian's Projects</title>
+    <title>Qi Lian's Resume</title>
 </head>
 
 <body>
@@ -24,9 +24,9 @@
     </div>
     <div class="tag_float">
         <ul class="nav navbar-nav">
-            <li><a href="./Resume.html">Resume</a></li>
+            <li class="active"><a href="#">Resume</a></li>
             <li><a href="./Skills.html" class="tag">Skills</a></li>
-            <li class="active"><a href="#" class="tag">Projects</a></li>
+            <li><a href="./Projects.html" class="tag">Projects</a></li>
             <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
             <li><a href="./About%20Me.html" class="tag">About Me</a></li>
         </ul>
@@ -39,11 +39,11 @@
 
     <div id="main_content_wrap" class="outer">
         <div class="introduction">
-            <h2 id="blog_title">Projects</h2>
-            <span id="blog_description"> --- a place to display some selected works</span>
+            <h2 id="blog_title">Qi Lian</h2>
+            <span id="blog_description"> --- a curriculum vitae</span>
             <div class="bg_part _1">
                 <h4 class="bg_title">
-                    Nothing is updated till now.
+                    This part is under building.
                 </h4>
                 <p class="bg_content"></p>
             </div>
