--- a/Skills.html
+++ b/Skills.html
@@ -25,7 +25,7 @@
     </div>
     <div class="tag_float">
         <ul class="nav navbar-nav">
-            <li><a href="">Resume</a></li>
+            <li><a href="./Resume.html">Resume</a></li>
             <li class="active"><a href="#" class="tag">Skills</a></li>
             <li><a href="./Projects.html" class="tag">Projects</a></li>
             <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
