--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="tag_float">
             <ul class="nav navbar-nav">
-                <li><a href="">Resume</a></li>
+                <li><a href="./Resume.html">Resume</a></li>
                 <li><a href="./Skills.html" class="tag">Skills</a></li>
                 <li><a href="./Projects.html" class="tag">Projects</a></li>
                 <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
@@ -42,8 +42,8 @@
             <div class="introduction">
                 <p>Hi! I'm Qi Lian, and you can call me Walden Lan.</p>
                 <p>Currently, I'm an undergraduate at <a href="http://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>. I'm a sophomore student major in ECE (Electrical and Computer Engineering) in
-                    <a href="http://umji.sjtu.edu.cn">UM-SJTU Joint Institute</a>. Currently, I'm serving as a research assistant at <a href="http://bcmi.sjtu.edu.cn">BCMI</a> (Brain-like Computing and Machine Intelligence)
-                    Lab at SJTU. My research interests are machine learning, data mining and web development. You can find most of my works
+                    <a href="http://umji.sjtu.edu.cn">UM-SJTU Joint Institute</a>. Currently, I'm serving as a research assistant at BCMI Lab (<a href="http://bcmi.sjtu.edu.cn">Center for Brain-like Computing and Machine Intelligence</a>)
+                    at SJTU. My research interests are machine learning, data mining and web development. You can find most of my works
                     <a href="http://github.com/waldenlan">here</a>.
                 </p>
                 <p>If you want to read more about me, you can go <a href="./About%20Me.html">here</a>.</p>
