--- a/About Me.html
+++ b/About Me.html
@@ -47,8 +47,8 @@
                 <br>
                 <p>Hi! I'm Qi Lian, and you can call me Walden Lan.</p>
                 <p>Currently, I'm an undergraduate at <a href="http://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>. I'm a sophomore student major in ECE (Electrical and Computer Engineering) in
-                    <a href="http://umji.sjtu.edu.cn">UM-SJTU Joint Institute</a>. Currently, I'm serving as a research assistant at <a href="http://bcmi.sjtu.edu.cn">BCMI</a> (Brain-like Computing and Machine Intelligence)
-                    Lab at SJTU. My research interests are machine learning, data mining and web development. You can find most of my works
+                    <a href="http://umji.sjtu.edu.cn">UM-SJTU Joint Institute</a>. Currently, I'm serving as a research assistant at BCMI Lab (<a href="http://bcmi.sjtu.edu.cn">Brain-like Computing and Machine Intelligence</a>)
+                    at SJTU. My research interests are machine learning, data mining and web development. You can find most of my works
                     <a href="http://github.com/waldenlan">here</a>.
                 </p>
                 <p>If you want to know more about me, you can scan the following QR code.</p>
