--- a/Resume.html
+++ b/Resume.html
@@ -41,12 +41,8 @@
         <div class="introduction">
             <h2 id="blog_title">Qi Lian</h2>
             <span id="blog_description"> --- a curriculum vitae</span>
-            <div class="bg_part _1">
-                <h4 class="bg_title">
-                    This part is under building.
-                </h4>
-                <p class="bg_content"></p>
-            </div>
+            <h4>This part is under building.</h4>
+            <p>You can get my resume <a href="#">here</a>.</p>
         </div>
         <a href="#top">Go to Top</a>
     </div>
