--- a/Skills.html
+++ b/Skills.html
@@ -119,7 +119,16 @@
                         <span class="software">Vim</span>
                     </div>
                 </div>
-
+                <div class="progress">
+                    <div class="progress-bar s" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100" style="width: 73%">
+                        <span class="software">Linux (Ubuntu)</span>
+                    </div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar s" role="progressbar" aria-valuenow="84" aria-valuemin="0" aria-valuemax="100" style="width: 84%">
+                        <span class="software">Windows</span>
+                    </div>
+                </div>
                 <div class="progress">
                     <div class="progress-bar s" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
                         <span class="software">Microsoft Office</span>
