Update personal resume in pdf version.

--- a/Resume.html
+++ b/Resume.html
@@ -42,7 +42,7 @@
             <h2 id="blog_title">Qi Lian</h2>
             <span id="blog_description"> --- a curriculum vitae</span>
             <h4>This part is under building.</h4>
-            <p>You can get my resume <a href="#">here</a>.</p>
+            <p>You can see my resume <a href="./Resume_Qi_Lian.pdf">here</a>.</p>
         </div>
         <a href="#top">Go to Top</a>
     </div>
