Update VG100 project 2 Update till 2016.5.13

--- a/Projects.html
+++ b/Projects.html
@@ -77,7 +77,7 @@
                 <span class="sub_description">--- work in 2016 Mathematical Contest in Modeling [Honorable Mention]</span>
                 <br>
                 <p class="bg_content">
-                    In this contest, we figure out two methods to eliminate the space debris in the space: water jet model and net model.
+                    In this contest, my team figure out two methods to eliminate the space debris in the space: water jet model and net model.
                     With these two basic physical models, we further develop an evaluation model based on AHP (Analytical Hierarchy Process) to evaluate those two methods.
                     Finally, we implement our ideas with MATLAB to conduct model simulation.
                 </p>
@@ -87,14 +87,38 @@
                     Our group is awarded as <i><b>Honorable Mention</b></i> in this contest, and you can get our certificate <a
                         href="MCM_Certificate_2016.pdf" target="_blank">here</a>.
                 </p>
+                <br>
+                <div class="img_MCM"><img src="./images/net_model%20figure.jpg" alt="net model" title="net model" height="205"></div>
+                <div class="img_MCM _1"><img src="./images/water%20jet_model%20figure.jpg" alt="water jet model" title="water jet model" height="205"></div>
+                <div class="img_MCM _1"><img src="./images/czfx.jpg" alt="Analytical Hierarchy Process" title="Analytical Hierarchy Process" height="250"></div>
+            </div>
+            <br style="clear: left;"><br>
+            <hr>
+            <div class="bg_part">
+                <h3 class="bg_title">
+                    Polynomial Actuation
+                </h3>
+                <span class="sub_description">--- course project in VG100 (Introduction to Engineering)</span>
+                <br>
+                <p class="bg_content">
+                    In the winter of 2014, our team built the polynomial actuation as the project in course Vg100-Introduction to engineering.
+                    This device can be applied to the mould manufacturing to improve the efficiency and cost in the process of model manufacturing.
+                    The polynomial actuation consists of 7 stepping motors and a rubber surface, which can freely change the mould shape in an efficient and convenient way.
+                </p>
+                <p class="bg_content">
+                    I am mainly responsible for the design of the physical structure. And you can find our engineering report
+                    <a href="">here</a>.
+                </p>
+                <br>
+                <div class="img_VG100"><img src="./images/VG100.png" alt="polynomial actuation" title="polynomial actuation" height="240"></div>
             </div>
         </div>
-        <br>
+        <br style="clear: left;"><br>
         <a href="#top">Go to Top</a>
     </div>
 
 </div>
-
+<br>
     <!-- FOOTER  -->
 <div class="endbar_outline">
     <div class="container">
