Restore several bugs. Update till 2016.5.13

--- a/Projects.html
+++ b/Projects.html
@@ -48,6 +48,8 @@
                 <h3 class="bg_title">
                     TA (Teaching Assistant) Evaluation System (website based)
                 </h3>
+                <span class="sub_description">--- 29th PRP (Undergraduate Research Program) in SJTU</span>
+                <br>
                 <p class="bg_content">
                     This website provides a platform for students in UM-SJTU Joint Institute to evaluate the work of teaching assistants in each course.
                     Also it is served as a media to improve the working quality of teaching assistants in Joint Institute.
