Update final report for VG100 Update till 2016.5.13

--- a/Projects.html
+++ b/Projects.html
@@ -109,7 +109,7 @@
                 </p>
                 <p class="bg_content">
                     I am mainly responsible for the design of the physical structure. And you can find our engineering report
-                    <a href="">here</a>.
+                    <a href="VG100_report.pdf" target="_blank">here</a>.
                 </p>
                 <br>
                 <div class="img_VG100"><img src="./images/VG100.png" alt="polynomial actuation" title="polynomial actuation" height="240"></div>
