Restore a small bug. Update till 2016.5.13

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="maincontent" name="top">
     <div id="main_content_wrap" class="outer">
         <h2>Intoduction</h2>
+        <h6>&nbsp;</h6>
         <img src="./images/personal%20photo.jpg" alt="Qi Lian's Personal Photo" width="250">
         <div class="intro">
             <div class="introduction">
