Update courses info. Update till 2016.5.13

--- a/Resume.html
+++ b/Resume.html
@@ -43,7 +43,32 @@
         <div class="introduction">
             <h2 id="blog_title">Qi Lian</h2>
             <span id="blog_description"> --- a curriculum vitae</span>
-            <br><br>
+            <h3>Core Course</h3>
+                <h5 class="SJTU">Shanghai Jiao Tong University</h5>
+            <div class="course">
+               <p>
+                    <span class="finish">VE203 &nbsp;&nbsp; Discrete Mathematics</span>
+                    <br>
+                    <span class="finish">VE215 &nbsp;&nbsp; Intro to Circuits</span>
+                    <br>
+                    <span class="finish">CS022 &nbsp;&nbsp; Principles of Database</span>
+                    <br>
+                    <span class="under">VE216 &nbsp;&nbsp; Intro to Signals and Systems</span>
+                    <br>
+                    <span class="under">VE270 &nbsp;&nbsp; Introduction to Logic Design</span>
+                    <br>
+                    <span class="under">VE280 &nbsp;&nbsp; Programming & Elem. Data Structures</span>
+                    <br>
+                    <span class="under">VE484 &nbsp;&nbsp; Data Mining</span>
+                </p>
+                <br>
+                <p>
+                    <i class="finish">Courses in dark = courses taken</i>
+                    <br>
+                    <i class="under">Courses in red = courses undertaking</i>
+                </p>
+            </div>
+            <h3>Resume</h3>
             <p>You can see my resume <a href="./Resume_Qi_Lian.pdf" target="_blank">here</a>.</p>
         </div>
         <a href="#top">Go to Top</a>
