--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul>
             <li>Machine Learning</li>
             <li>Data Mining</li>
-            <li>Web Front-end Development</li>
+            <li>Web Development (Front-end and Back-end)</li>
         </ul>
         <h2>Contact</h2>
         <div class="row">
