--- a/Projects.html
+++ b/Projects.html
@@ -116,7 +116,7 @@
             </div>
         </div>
         <br style="clear: left;"><br>
-        <a href="#top">Go to Top</a>
+        <a href="#top" id="To_Top">Go to Top</a>
     </div>
 
 </div>
