--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <h2>About this site</h2>
         <p>This site is made with <a href="http://getbootstrap.com/" target="_blank"><img src='./images/bootstrap.png' alt='bootstrap_logo' width="90"></a> frameworks, and deployed on <a href="https://github.com/WaldenLan/WaldenLan.github.io" target="_blank">Github</a>.</p>
-        <a href="#top">Go to Top</a>
+        <a href="#top" id="To_Top">Go to Top</a>
     </div>
         </div>
 
