--- a/Resume.html
+++ b/Resume.html
@@ -71,7 +71,7 @@
             <h3>Resume</h3>
             <p>You can see my resume <a href="./Resume_Qi_Lian.pdf" target="_blank">here</a>.</p>
         </div>
-        <a href="#top" id="To_Top">Go to Top</a>
+        <a id="To_Top">Go to Top</a>
     </div>
 
 </div>
