--- a/Personal Blog.html
+++ b/Personal Blog.html
@@ -50,7 +50,7 @@
                 <p class="bg_content"></p>
             </div>
         </div>
-        <a href="#top" id="To_Top">Go to Top</a>
+        <a id="To_Top">Go to Top</a>
     </div>
 </div>
 
