--- a/Skills.html
+++ b/Skills.html
@@ -164,7 +164,7 @@
                 </div>
             </div>
         </div>
-        <a href="#top" id="To_Top">Go to Top</a>
+        <a id="To_Top">Go to Top</a>
     </div>
 
 </div>
