Restore the zooming bugs. Update till 2016.5.13

--- a/Skills.html
+++ b/Skills.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Qi (Walden) Lian's Skills">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.5, minimum-scale=0.8">
-    <!--<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">-->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./stylesheets/Bootstrap.custom.css">
-    <link rel="stylesheet" href="./stylesheets/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="./stylesheets/bootstrap.min.css">-->
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script src="./javascripts/main.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -19,20 +18,24 @@
 <body>
 
 <!-- HEADER -->
+
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="./index.html">Qi (Walden) Lian's Homepage</a>
-    </div>
-    <div class="tag_float">
-        <ul class="nav navbar-nav">
-            <li><a href="./Resume.html">Resume</a></li>
-            <li class="active"><a href="#" class="tag">Skills</a></li>
-            <li><a href="./Projects.html" class="tag">Projects</a></li>
-            <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
-            <li><a href="./About%20Me.html" class="tag">About Me</a></li>
-        </ul>
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="./index.html">Qi (Walden) Lian's Homepage</a>
+        </div>
+        <div class="tag_float">
+            <ul class="nav navbar-nav">
+                <li><a href="./Resume.html">Resume</a></li>
+                <li class="active"><a href="#" class="tag">Skills</a></li>
+                <li><a href="./Projects.html" class="tag">Projects</a></li>
+                <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
+                <li><a href="./About%20Me.html" class="tag">About Me</a></li>
+            </ul>
+        </div>
     </div>
 </nav>
+
 
 <!-- MAIN CONTENT -->
 
@@ -164,36 +167,40 @@
         <a href="#top">Go to Top</a>
     </div>
 
+</div>
 
     <!-- FOOTER  -->
-    <hr>
-    <div class="outer endbar">
-        <h4>Qi Lian's Homepage</h4>
-        <div class="row">
-            <h5 class="col-sm-3">
-                <a href="mailto:darken@sjtu.edu.cn">darken@sjtu.edu.cn</a>
-                <br><br>
-                Currently in SJTU
-            </h5>
-            <h5 class="col-sm-3">
-                <a href="http://github.com/waldenlan" class="_logo">
-                    <img src="./images/github.png" alt="Github_logo" class="img-circle" width="18">
-                    <span id="github_username">waldenlan</span>
-                </a>
-                <br>
-                <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo">
-                    <img src="./images/linkedin.png" alt="Linkedin_logo" class="img-rounded" width="18">
-                    <span id="linkedin_username">Qi Lian</span>
-                </a>
-            </h5>
-            <h5 class="col-sm-5">
-                Copyright &copy; <span id="current_year"></span>, Qi Lian. All rights reserved. <br><br>
-                Last update: <span id="update_time"></span>
-            </h5>
+<br>
+
+<div class="endbar_outline">
+    <div class="container">
+        <div class="outer endbar">
+            <h4>Qi Lian's Homepage</h4>
+            <div class="row">
+                <h5 class="col-sm-3">
+                    <a href="mailto:darken@sjtu.edu.cn">darken@sjtu.edu.cn</a>
+                    <br><br>
+                    Currently in SJTU
+                </h5>
+                <h5 class="col-sm-3">
+                    <a href="http://github.com/waldenlan" class="_logo">
+                        <img src="./images/github.png" alt="Github_logo" class="img-circle" width="18">
+                        <span id="github_username">waldenlan</span>
+                    </a>
+                    <br>
+                    <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo">
+                        <img src="./images/linkedin.png" alt="Linkedin_logo" class="img-rounded" width="18">
+                        <span id="linkedin_username">Qi Lian</span>
+                    </a>
+                </h5>
+                <h5 class="col-sm-5">
+                    Copyright &copy; <span id="current_year"></span>, Qi Lian. All rights reserved. <br><br>
+                    Last update: <span id="update_time"></span>
+                </h5>
+            </div>
         </div>
     </div>
-
-
 </div>
+
 </body>
 </html>
