--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
 
     <!-- HEADER -->
     <nav class="navbar navbar-default navbar-static-top" role="navigation">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Qi (Walden) Lian's Homepage</a>
-        </div>
-        <div class="tag_float">
-            <ul class="nav navbar-nav">
-                <li><a href="./Resume.html">Resume</a></li>
-                <li><a href="./Skills.html" class="tag">Skills</a></li>
-                <li><a href="./Projects.html" class="tag">Projects</a></li>
-                <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
-                <li><a href="./About%20Me.html" class="tag">About Me</a></li>
-            </ul>
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Qi (Walden) Lian's Homepage</a>
+            </div>
+            <div class="tag_float">
+                <ul class="nav navbar-nav">
+                    <li><a href="./Resume.html">Resume</a></li>
+                    <li><a href="./Skills.html" class="tag">Skills</a></li>
+                    <li><a href="./Projects.html" class="tag">Projects</a></li>
+                    <li><a href="./Personal%20Blog.html" class="tag">Personal Blog</a></li>
+                    <li><a href="./About%20Me.html" class="tag">About Me</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -68,36 +70,40 @@
         <p>This site is made with <a href="http://getbootstrap.com/"><img src='./images/bootstrap.png' alt='bootstrap_logo' width="90"></a> frameworks, and deployed on <a href="https://github.com/WaldenLan/WaldenLan.github.io">Github</a>.</p>
         <a href="#top">Go to Top</a>
     </div>
-
-      <!-- FOOTER  -->
-      <hr>
-      <div class="outer endbar">
-        <h4>Qi Lian's Homepage</h4>
-        <div class="row">
-            <h5 class="col-sm-3">
-                <a href="mailto:darken@sjtu.edu.cn">darken@sjtu.edu.cn</a>
-                <br><br>
-                Currently in SJTU
-            </h5>
-            <h5 class="col-sm-3">
-                <a href="http://github.com/waldenlan" class="_logo">
-                    <img src="./images/github.png" alt="Github_logo" class="img-circle" width="18">
-                    <span id="github_username">waldenlan</span>
-                </a>
-                <br>
-                <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo">
-                    <img src="./images/linkedin.png" alt="Linkedin_logo" class="img-rounded" width="18">
-                    <span id="linkedin_username">Qi Lian</span>
-                </a>
-            </h5>
-            <h5 class="col-sm-5">
-                Copyright &copy; <span id="current_year"></span>, Qi Lian. All rights reserved. <br><br>
-                Last update: <span id="update_time"></span>
-            </h5>
         </div>
-    </div>
 
+        <!-- FOOTER  -->
+        <br>
 
-  </div>
+        <div class="endbar_outline">
+            <div class="container">
+                <div class="outer endbar">
+                    <h4>Qi Lian's Homepage</h4>
+                    <div class="row">
+                        <h5 class="col-sm-3">
+                            <a href="mailto:darken@sjtu.edu.cn">darken@sjtu.edu.cn</a>
+                            <br><br>
+                            Currently in SJTU
+                        </h5>
+                        <h5 class="col-sm-3">
+                            <a href="http://github.com/waldenlan" class="_logo">
+                                <img src="./images/github.png" alt="Github_logo" class="img-circle" width="18">
+                                <span id="github_username">waldenlan</span>
+                            </a>
+                            <br>
+                            <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo">
+                                <img src="./images/linkedin.png" alt="Linkedin_logo" class="img-rounded" width="18">
+                                <span id="linkedin_username">Qi Lian</span>
+                            </a>
+                        </h5>
+                        <h5 class="col-sm-5">
+                            Copyright &copy; <span id="current_year"></span>, Qi Lian. All rights reserved. <br><br>
+                            Last update: <span id="update_time"></span>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
   </body>
 </html>
