Restore the hyperlinks and update two projects Update till 2016.5.13

--- a/Projects.html
+++ b/Projects.html
@@ -45,12 +45,51 @@
             <h2 id="blog_title">Projects</h2>
             <span id="blog_description"> --- a place to display some selected works</span>
             <div class="bg_part _1">
-                <h4 class="bg_title">
-                    Nothing is updated till now.
-                </h4>
-                <p class="bg_content"></p>
+                <h3 class="bg_title">
+                    TA (Teaching Assistant) Evaluation System (website based)
+                </h3>
+                <p class="bg_content">
+                    This website provides a platform for students in UM-SJTU Joint Institute to evaluate the work of teaching assistants in each course.
+                    Also it is served as a media to improve the working quality of teaching assistants in Joint Institute.
+                </p>
+                <p class="bg_content">
+                    In this project, I'm mainly responsible for the front-end part. I design the UI (user interface) for this system which consists of three terminals: manager, teacher, and student.
+                    Also, I implement the interface with HTML, CSS and Bootstrap 3.0, and further implement the interaction events with pure JavaScript and jQuery.
+                </p>
+                <p class="bg_content">
+                    You can find my work in <a href="http://ta.umji.sjtu.edu.cn/ta/evaluation" target="_blank">ta.umji.sjtu.edu.cn/ta/evaluation</a> (Corresponding IP: 202.120.46.151).
+                    This site is under testing, and you can visit it by revising the host file.
+                </p>
+                <p class="bg_content">
+                    Here are other websites I design:
+                    <br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://tecrobot.azurewebsites.net/" target="_blank">Homepage for TEC (Teen Engineering Camp) Team in Joint Institute (Built with Azure)</a>
+                    <br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://waldenlan.github.io" target="_blank">My Own Personal Static Website</a>
+                </p>
+            </div>
+            <br>
+            <hr>
+            <div class="bg_part">
+                <h3 class="bg_title">
+                    Evaluation Model for Eliminating Space Debris
+                </h3>
+                <span class="sub_description">--- work in 2016 Mathematical Contest in Modeling [Honorable Mention]</span>
+                <br>
+                <p class="bg_content">
+                    In this contest, we figure out two methods to eliminate the space debris in the space: water jet model and net model.
+                    With these two basic physical models, we further develop an evaluation model based on AHP (Analytical Hierarchy Process) to evaluate those two methods.
+                    Finally, we implement our ideas with MATLAB to conduct model simulation.
+                </p>
+                <p class="bg_content">
+                    I am served as the group leader of this project, and I am mainly responsible for the establishment and the implementation of the evaluation model.
+                    You can get our whole report <a href="MCM_Report_2016.pdf" target="_blank">here</a>.
+                    Our group is awarded as <i><b>Honorable Mention</b></i> in this contest, and you can get our certificate <a
+                        href="MCM_Certificate_2016.pdf" target="_blank">here</a>.
+                </p>
             </div>
         </div>
+        <br>
         <a href="#top">Go to Top</a>
     </div>
 
@@ -68,12 +107,12 @@
                     Currently in SJTU
                 </h5>
                 <h5 class="col-sm-3">
-                    <a href="http://github.com/waldenlan" class="_logo">
+                    <a href="http://github.com/waldenlan" class="_logo" target="_blank">
                         <img src="./images/github.png" alt="Github_logo" class="img-circle" width="18">
                         <span id="github_username">waldenlan</span>
                     </a>
                     <br>
-                    <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo">
+                    <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo" target="_blank">
                         <img src="./images/linkedin.png" alt="Linkedin_logo" class="img-rounded" width="18">
                         <span id="linkedin_username">Qi Lian</span>
                     </a>
