--- a/Skills.html
+++ b/Skills.html
@@ -183,12 +183,12 @@
                     Currently in SJTU
                 </h5>
                 <h5 class="col-sm-3">
-                    <a href="http://github.com/waldenlan" class="_logo">
+                    <a href="http://github.com/waldenlan" class="_logo" target="_blank">
                         <img src="./images/github.png" alt="Github_logo" class="img-circle" width="18">
                         <span id="github_username">waldenlan</span>
                     </a>
                     <br>
-                    <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo">
+                    <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo" target="_blank">
                         <img src="./images/linkedin.png" alt="Linkedin_logo" class="img-rounded" width="18">
                         <span id="linkedin_username">Qi Lian</span>
                     </a>
