--- a/Resume.html
+++ b/Resume.html
@@ -44,7 +44,7 @@
             <h2 id="blog_title">Qi Lian</h2>
             <span id="blog_description"> --- a curriculum vitae</span>
             <h4>This part is under building.</h4>
-            <p>You can see my resume <a href="./Resume_Qi_Lian.pdf">here</a>.</p>
+            <p>You can see my resume <a href="./Resume_Qi_Lian.pdf" target="_blank">here</a>.</p>
         </div>
         <a href="#top">Go to Top</a>
     </div>
@@ -65,12 +65,12 @@
                     Currently in SJTU
                 </h5>
                 <h5 class="col-sm-3">
-                    <a href="http://github.com/waldenlan" class="_logo">
+                    <a href="http://github.com/waldenlan" class="_logo" target="_blank">
                         <img src="./images/github.png" alt="Github_logo" class="img-circle" width="18">
                         <span id="github_username">waldenlan</span>
                     </a>
                     <br>
-                    <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo">
+                    <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo" target="_blank">
                         <img src="./images/linkedin.png" alt="Linkedin_logo" class="img-rounded" width="18">
                         <span id="linkedin_username">Qi Lian</span>
                     </a>
