--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div class="intro">
             <div class="introduction">
                 <p>Hi! I'm Qi Lian, and you can call me Walden Lan.</p>
-                <p>Currently, I'm an undergraduate at <a href="http://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>. I'm a sophomore student major in ECE (Electrical and Computer Engineering) in
-                    <a href="http://umji.sjtu.edu.cn">UM-SJTU Joint Institute</a>. Currently, I'm serving as a research assistant at BCMI Lab (<a href="http://bcmi.sjtu.edu.cn">Center for Brain-like Computing and Machine Intelligence</a>)
+                <p>Currently, I'm an undergraduate at <a href="http://www.sjtu.edu.cn/" target="_blank">Shanghai Jiao Tong University</a>. I'm a sophomore student major in ECE (Electrical and Computer Engineering) in
+                    <a href="http://umji.sjtu.edu.cn" target="_blank">UM-SJTU Joint Institute</a>. Currently, I'm serving as a research assistant at BCMI Lab (<a href="http://bcmi.sjtu.edu.cn" target="_blank">Center for Brain-like Computing and Machine Intelligence</a>)
                     at SJTU. My research interests are machine learning, data mining and web development. You can find most of my works
-                    <a href="http://github.com/waldenlan">here</a>.
+                    <a href="http://github.com/waldenlan" target="_blank">here</a>.
                 </p>
                 <p>If you want to read more about me, you can go <a href="./About%20Me.html">here</a>.</p>
             </div>
@@ -67,7 +67,7 @@
             </h5>
         </div>
         <h2>About this site</h2>
-        <p>This site is made with <a href="http://getbootstrap.com/"><img src='./images/bootstrap.png' alt='bootstrap_logo' width="90"></a> frameworks, and deployed on <a href="https://github.com/WaldenLan/WaldenLan.github.io">Github</a>.</p>
+        <p>This site is made with <a href="http://getbootstrap.com/" target="_blank"><img src='./images/bootstrap.png' alt='bootstrap_logo' width="90"></a> frameworks, and deployed on <a href="https://github.com/WaldenLan/WaldenLan.github.io" target="_blank">Github</a>.</p>
         <a href="#top">Go to Top</a>
     </div>
         </div>
@@ -86,12 +86,12 @@
                             Currently in SJTU
                         </h5>
                         <h5 class="col-sm-3">
-                            <a href="http://github.com/waldenlan" class="_logo">
+                            <a href="http://github.com/waldenlan" class="_logo" target="_blank">
                                 <img src="./images/github.png" alt="Github_logo" class="img-circle" width="18">
                                 <span id="github_username">waldenlan</span>
                             </a>
                             <br>
-                            <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo">
+                            <a href="https://cn.linkedin.com/in/qi-lian-74b216b1" class="_logo" target="_blank">
                                 <img src="./images/linkedin.png" alt="Linkedin_logo" class="img-rounded" width="18">
                                 <span id="linkedin_username">Qi Lian</span>
                             </a>
