--- a/Personal Blog.html
+++ b/Personal Blog.html
@@ -45,7 +45,7 @@
             <span id="blog_description"> --- a place to record some useful tips and skills</span>
             <div class="bg_part _1">
                 <h4 class="bg_title">
-                    Follow the link: <a href="http://www.waldenlian.com/" target="_blank">www.waldenlian.com</a>
+                    Follow the link: <a href="http://www.waldenlian.com" target="_blank">www.waldenlian.com</a>
                 </h4>
                 <p class="bg_content"></p>
             </div>
