--- a/Resume.html
+++ b/Resume.html
@@ -47,19 +47,29 @@
                 <h5 class="SJTU">Shanghai Jiao Tong University</h5>
             <div class="course">
                <p>
+                    <span class="finish">VG101 &nbsp;&nbsp; Intro to Computers and Programming</span>
+                    <br>
                     <span class="finish">VE203 &nbsp;&nbsp; Discrete Mathematics</span>
                     <br>
                     <span class="finish">VE215 &nbsp;&nbsp; Intro to Circuits</span>
                     <br>
                     <span class="finish">CS022 &nbsp;&nbsp; Principles of Database</span>
                     <br>
-                    <span class="under">VE216 &nbsp;&nbsp; Intro to Signals and Systems</span>
+                    <span class="finish">VE216 &nbsp;&nbsp; Intro to Signals and Systems</span>
                     <br>
-                    <span class="under">VE270 &nbsp;&nbsp; Introduction to Logic Design</span>
+                    <span class="finish">VE270 &nbsp;&nbsp; Intro to Logic Design</span>
                     <br>
-                    <span class="under">VE280 &nbsp;&nbsp; Programming & Elem. Data Structures</span>
+                    <span class="finish">VE280 &nbsp;&nbsp; Programming & Elem. Data Structures</span>
                     <br>
-                    <span class="under">VE484 &nbsp;&nbsp; Data Mining</span>
+                    <span class="finish">VE484 &nbsp;&nbsp; Data Mining</span>
+                    <br>
+                    <span class="under">VE281 &nbsp;&nbsp; Data Structures and Algorithms</span>
+                    <br>
+                    <span class="under">VE370 &nbsp;&nbsp; Intro to Computer Organizations</span>
+                    <br>
+                    <span class="under">VE477 &nbsp;&nbsp; Intro to Algorithms</span>
+                    <br>
+                    <span class="under">VE482 &nbsp;&nbsp; Intro to Operating Systems</span>
                 </p>
                 <br>
                 <p>
