--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="intro">
             <div class="introduction">
                 <p>Hi! I'm Qi Lian, and you can call me Walden Lan.</p>
-                <p>Currently, I'm an undergraduate at <a href="http://www.sjtu.edu.cn/" target="_blank">Shanghai Jiao Tong University</a>. I'm a sophomore student major in ECE (Electrical and Computer Engineering) in
+                <p>Currently, I'm an undergraduate at <a href="http://www.sjtu.edu.cn/" target="_blank">Shanghai Jiao Tong University</a>. I'm a junior student major in ECE (Electrical and Computer Engineering) in
                     <a href="http://umji.sjtu.edu.cn" target="_blank">UM-SJTU Joint Institute</a>. Currently, I'm serving as a research assistant at BCMI Lab (<a href="http://bcmi.sjtu.edu.cn" target="_blank">Center for Brain-like Computing and Machine Intelligence</a>)
                     at SJTU. My research interests are machine learning, data mining and web development. You can find most of my works
                     <a href="http://github.com/waldenlan" target="_blank">here</a>.
