--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="introduction">
                 <p>Hi! I'm Qi Lian, and you can call me Walden Lan.</p>
                 <p>Currently, I'm an undergraduate at <a href="http://www.sjtu.edu.cn/" target="_blank">Shanghai Jiao Tong University</a>. I'm a junior student major in ECE (Electrical and Computer Engineering) in
-                    <a href="http://umji.sjtu.edu.cn" target="_blank">UM-SJTU Joint Institute</a>. Currently, I'm seeking for an internship/research in during 2016 Winter and 2017 Spring. My research interests are machine learning, data mining and web development. You can find most of my works
+                    <a href="http://umji.sjtu.edu.cn" target="_blank">UM-SJTU Joint Institute</a>. Currently, I'm seeking for an internship/research in CE/CS during 2016 Winter and 2017 Spring. My research interests are machine learning, data mining and web development. You can find most of my works
                     <a href="http://github.com/waldenlan" target="_blank">here</a>.
                 </p>
                 <p>If you want to read more about me, you can go <a href="./About%20Me.html">here</a>.</p>
